# nonebot-plugin-mbtistats-devbot

./: .env.example  .env.onebotv11-wsRev.example  .env.onebotv11.example  .env.qqbot.example  .gitignore  .gitmodules  CONTEXT.md  Dockerfile  README.md  TODO.md  aitest.py  bot.py  debug_frontend.py  pyproject.toml
.ai/: plan-260218.md
.trae/documents/: MBTI统计页面图表修复计划.md  plan_20251221_033109.md  plan_20251221_035349.md
docs/: AI_CHAT_DEPLOY.md  data-specs.md
plugins/: ai_chat.py  ai_chat_plugin.py  custom_help.py  eval.py  eval_plugin.py  fortune.py  recall.py  recall_plugin.py  timer.py  timer_plugin.py
plugins/mbtistats/: __init__.py  analyze.py  auto_stats.py  get_group_data.py  playwright_context.py  proactive.py  render.py  send_image.py
scripts/: debug_frontend.py  migrate_data_v1.py  test_render_standalone.py
template/mbti-stats/: example.html  example.html.backup  index.html  index.html.backup  lttb_demo.html  mock single data.json  mock.json  scripts.mjs  styles.css
template/trait-stats/: index.html
template/type-stats/: index.html
